--- a/rvm/src/main/resources/application.properties
+++ b/rvm/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto= update
 # spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL10Dialect
 server.port=8282
 spring.jpa.show-sql= true
+logging.level.org.springframework.security=DEBUG
